--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "author": "DaftCode",
+  "author": "",
   "license": "MIT",
-  "name": "daftcode-react-starter",
+  "name": "spacex-launches",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
