--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
         "max-len": 0,
         "no-underscore-dangle": ["error", {
             "allow": ["__REDUX_DEVTOOLS_EXTENSION_COMPOSE__"]
-        }]
+        }],
+        "jsx-a11y/no-noninteractive-element-interactions": 0
     },
     "parser": "babel-eslint",
     "env": {
