--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.0.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
